[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web_express_py"
version = "0.0.10"
authors = [
  { name="Aaron", email="AJ@jonk.name" },
]
description = "Webserver written as express.js"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Source Code" = "https://github.com/Hattorius/express.py"
"Issues" = "https://github.com/Hattorius/express.py/issues"
"Wiki" = "https://github.com/Hattorius/express.py/wiki"